--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Srimanta Bagchi",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.606.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "request": "^2.88.0",
     "uuid": "^3.3.3"
   },
