--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Srimanta Bagchi",
   "license": "ISC",
   "dependencies": {
+    "amazon-cognito-identity-js": "^3.2.2",
     "aws-sdk": "^2.606.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.2.4",
@@ -22,6 +23,7 @@
     "mongoose": "^5.7.12",
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
+    "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "uuid": "^3.3.3"
   },
